--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,16 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
-    // 日志框架
+    // 日志库
     implementation 'com.orhanobut:logger:2.2.0'
 
+    // Retrofit库
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // utilcodex库
+    implementation 'com.blankj:utilcodex:1.30.1'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
